2025-09-22T00:55:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17901427112 # 774
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 7 14
* notice: prev accum: outdated-unq outdated-all / unq all: 929 1408 / 942 1421
* notice: next accum: outdated-unq outdated-all / unq all: 930 1409 / 944 1423
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-08] / [2025-09-21]

2025-09-21T00:55:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17886924277 # 773
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-21
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 928 1407 / 940 1419
* notice: next accum: outdated-unq outdated-all / unq all: 929 1408 / 942 1421
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-07] / [2025-09-20]

2025-09-20T00:47:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17872991406 # 772
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 927 1406 / 939 1418
* notice: next accum: outdated-unq outdated-all / unq all: 928 1407 / 940 1419
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-06] / [2025-09-19]

2025-09-19T00:51:36Z: