@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-22T00:55:07Z",
-  "count_outdated" : 1409,
-  "uniques_outdated" : 930,
-  "count" : 1423,
-  "uniques" : 944,
+  "timestamp" : "2025-09-23T00:50:03Z",
+  "count_outdated" : 1410,
+  "uniques_outdated" : 931,
+  "count" : 1424,
+  "uniques" : 945,
   "clones" : [
-    {
-      "timestamp": "2025-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-11T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
