@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-09-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-11T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -56,6 +51,11 @@
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
